<resources>
    <string name="app_name">Git Repositories</string>
    <string name="label_git_repositories">Git Repositories</string>
    <string name="label_detail">Detail</string>
    <string name="label_user_detail">User Detail</string>
    <string name="label_twitter_handle">Twitter handle</string>
    <string name="label_created_by">Created by</string>
    <string name="label_at">at</string>
    <string name="ellipses">&#8230;</string>
    <string name="error_no_internet">No internet available</string>
    <string name="error_unable_to_load">Unable to fetch data from server. try again.</string>
    <string name="label_retry">Retry</string>
</resources>